<resources>
    <!--Application Name-->
    <string name="app_name">LilChat</string>

    <!--Facebook Login-->
    <string name="facebook_application_id">219532185493926</string>
    <string name="facebook_login_protocol_scheme">fb219532185493926</string>

    <!--Authorities-->
    <string name="authorities">com.marius.scarlat.admin.chatapp</string>
    cha
    <!--View resources-->
    <string name="user_register_message">Don\'t have an account, yet? Please, sign up!</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="full_name_hint">Full Name</string>
    <string name="logout_button">Log Out</string>
    <string name="user_login_message">Already have an account? Please, sign in!</string>
    <string name="email_address">Email Address</string>
    <string name="status_information">Your Status:</string>
    <string name="personal_information">Personal Information:</string>
    <string name="status">Status</string>
    <string name="change_status">Change Status</string>
    <string name="change_photo">Change Photo</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="submit">Submit</string>
    <string name="reset_pass_info">Please enter your email address. You will receive a link to create a new password via email.</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="google_image_button">Google Image Button</string>
    <string name="facebook_image_button">Facebook Image Button</string>
    <string name="alternatives_login">Alternatives:</string>
    <string name="sign_up">Sign up</string>
    <string name="create_an_account">Create an Account</string>
    <string name="number_of_friends">Number of friends</string>
    <string name="change_status_btn">Change Status</string>
    <string name="publish_status_btn">Publish Status</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="unfriend_person">Unfriend</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="last_seen">Last Seen</string>
    <string name="message_content">Message content</string>
    <string name="timestamp">Timestamp</string>
    <string name="title_activity_maps">Map</string>
</resources>
