<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/chatMessageLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileCircleImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/default_avatar"/>

    <TextView
        android:id="@+id/fullNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/profileCircleImageView"
        android:text="@string/full_name_hint"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullNameTextView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/profileCircleImageView"
        android:background="@drawable/user_message_layout"
        android:padding="5dp"
        android:hint="@string/message_content"
        android:textAlignment="center"
        android:textColor="#eee"
        android:textSize="14sp"/>


    <TextView
        android:id="@+id/timestampTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/fullNameTextView"
        android:hint="@string/timestamp"
        android:textSize="12sp"/>

</RelativeLayout>